complete work with full documentation and additonal bert trial

--- a/pom.xml
+++ b/pom.xml
@@ -83,23 +83,23 @@
 						<configuration>
 							<target>
 								<!-- fastText -->
-								<mkdir dir="${project.build.directory}/lib" />
-								<get
-										src="https://github.com/facebookresearch/fastText/archive/v0.2.0.zip"
-										dest="${project.build.directory}/lib/fastText-0.2.0.zip"
-										verbose="false" usetimestamp="true"/>
-								<unzip
-										src="${project.build.directory}/lib/fastText-0.2.0.zip"
-										dest="${project.build.directory}/lib/" />
-								<exec executable="make" failonerror="true"
-									  dir="${project.build.directory}/lib/fastText-0.2.0/"/>
-								<move file="${project.build.directory}/lib/fastText-0.2.0/fasttext"
-									  tofile="${project.build.directory}/lib/fasttext"/>
-                                <!-- Evaluation script -->
-                                <get
-                                        src="https://raw.githubusercontent.com/filannim/2018_n2c2_evaluation_scripts/master/track1_eval.py"
-                                        dest="${project.build.directory}/track1_eval.py"
-                                        verbose="false" usetimestamp="true"/>
+<!--								<mkdir dir="${project.build.directory}/lib" />-->
+<!--								<get-->
+<!--										src="https://github.com/facebookresearch/fastText/archive/v0.2.0.zip"-->
+<!--										dest="${project.build.directory}/lib/fastText-0.2.0.zip"-->
+<!--										verbose="false" usetimestamp="true"/>-->
+<!--								<unzip-->
+<!--										src="${project.build.directory}/lib/fastText-0.2.0.zip"-->
+<!--										dest="${project.build.directory}/lib/" />-->
+<!--								<exec executable="make" failonerror="true"-->
+<!--									  dir="${project.build.directory}/lib/fastText-0.2.0/"/>-->
+<!--								<move file="${project.build.directory}/lib/fastText-0.2.0/fasttext"-->
+<!--									  tofile="${project.build.directory}/lib/fasttext"/>-->
+<!--                                &lt;!&ndash; Evaluation script &ndash;&gt;-->
+<!--                                <get-->
+<!--                                        src="https://raw.githubusercontent.com/filannim/2018_n2c2_evaluation_scripts/master/track1_eval.py"-->
+<!--                                        dest="${project.build.directory}/track1_eval.py"-->
+<!--                                        verbose="false" usetimestamp="true"/>-->
 							</target>
 						</configuration>
 						<goals>
@@ -250,7 +250,14 @@
 	<!-- ............................ -->
 
 	<dependencies>
-		<!-- BEGIN added for deeplearning4j -->
+        <!-- https://mvnrepository.com/artifact/com.robrua.nlp/easy-bert -->
+        <dependency>
+            <groupId>com.robrua.nlp</groupId>
+            <artifactId>easy-bert</artifactId>
+            <version>1.0.3</version>
+        </dependency>
+
+        <!-- BEGIN added for deeplearning4j -->
 		<!-- .............................. -->
 
 		<!-- ND4J backend. You need one in every DL4J project. Normally define 
